add account api, implementing jewellery, add tx, fix swagger
